# AleksIshkov

./: .gitignore  Dockerfile  README.md  pyproject.toml
ml_project/: Makefile
ml_project/configs/: logger.conf.yml  model_params.yml
ml_project/data_processing/: processing.py
ml_project/model/: finalized_model.sav  fit_predict.py  train_params.py
ml_project/notebooks/heart_disease_cleveland/: Untitled.ipynb
ml_project/notebooks/heart_disease_cleveland/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
ml_project/notebooks/heart_disease_cleveland/report/: Report.py  my_report.html  pandas_profiling_report.html
ml_project/online_inference/: Request.txt  app.py  app_test.py  request_example.py
ml_project/tests/unit/: test.py
